Fix buttons, font, spacing for cards
Remove button element and make it anchor tag. Style 2 buttons, one
to visit the site and the other for source code. Align button to
bottom. Add in placeholder cards for other projects.

--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -65,19 +65,47 @@
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	grid-auto-rows: auto;
 	grid-gap: 2rem;
-	padding: 2rem;
+	padding: 10rem 20rem;
 
 	footer {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-
-		button {
-			width: 125px;
-			height: 25px;
-		}
+		margin-top: auto;
 	}
+}
+
+.btn:link,
+.btn:visited {
+	text-transform: uppercase;
+	text-decoration: none;
+	padding: 10px 30px;
+	border-radius: 100px;
+	transition: all .2s;
+	letter-spacing: 7px;
+	margin: 4px;
+}
+
+.btn:hover {
+	transform: translateY(-3px);
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+	transform: translateY(-1px);
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+	background-color: $color-primary-100;
+	color: $color-primary-800;
+}
+
+.btn-blue {
+	background-color: $color-primary-900;
+	color: white;
+	// width: 136px;
 }
 
 .card {
@@ -91,6 +119,17 @@
 	flex-direction: column;
 }
 
+.card-content {
+	padding: 2rem;
+
+	h4 {
+		text-align: center;
+		font-size: 10rem;
+		width: 100%;
+		padding-bottom: 2rem;
+	}
+}
+
 .thumbnail img {
 	height: 250px;
 	width: 100%;
@@ -101,4 +140,9 @@
 	width: 50%;
 	// text-align: center;
 	margin-left: 25%;
+}
+
+.card-desc {
+	padding-left: 2rem;
+	font-size: 1.6rem;
 }
